--- a/index.html
+++ b/index.html
@@ -40,7 +40,21 @@
         <span class="material-symbols-sharp mountain" style="--i:1">landscape</span>
         <span class="material-symbols-sharp mountain" style="--i:2">landscape</span>
         <span class="material-symbols-sharp mountain" style="--i:3">landscape</span>
+
+        <span class="material-symbols-sharp traffic">traffic</span>
+        <span class="material-symbols-sharp people">emoji_people</span>
+    
+        <span class="cor"></span>
+    
+        <div class="faixa">
+            <span style="--i:1"></span>
+            <span style="--i:2"></span>
+            <span style="--i:3"></span>
+            <span style="--i:4"></span>
+            <span style="--i:5"></span>
+        </div>
     </div>
-    <input type="checkbox">
+    <input type="checkbox" id="playStop">
+    <label for="playStop"></label>
 </body>
 </html>
